{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 636,
  "lineage": "560f8bb6-12e5-ba1c-f7f9-74f6e736766b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552940445807:vpc/vpc-02cb40b4e650bf1fb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cdfea5b748a218ff",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-07f456cc180bc14e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cb40b4e650bf1fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e166e0ecc1275895",
            "owner_id": "552940445807",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-dev-frontend-alb/fd9ce6ea751d5042",
            "arn_suffix": "app/emp-dev-frontend-alb/fd9ce6ea751d5042",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "emp-dev-frontend-alb-667235864.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-dev-frontend-alb/fd9ce6ea751d5042",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "emp-dev-frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0979e23d01d8101bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0034bda580633f970"
              },
              {
                "subnet_id": "subnet-0642a3fa899c6b146"
              },
              {
                "subnet_id": "subnet-08a15b0fc26f78b95"
              },
              {
                "subnet_id": "subnet-0ab9f1adb21d08d4a"
              },
              {
                "subnet_id": "subnet-0b0af126460583eba"
              },
              {
                "subnet_id": "subnet-0dd5d6a1cc7844d56"
              }
            ],
            "subnets": [
              "subnet-0034bda580633f970",
              "subnet-0642a3fa899c6b146",
              "subnet-08a15b0fc26f78b95",
              "subnet-0ab9f1adb21d08d4a",
              "subnet-0b0af126460583eba",
              "subnet-0dd5d6a1cc7844d56"
            ],
            "vpc_id": "vpc-02cb40b4e650bf1fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-dev-frontend-alb/fd9ce6ea751d5042"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-prod-frontend-alb/aa93dbcb58da3f85",
            "arn_suffix": "app/emp-prod-frontend-alb/aa93dbcb58da3f85",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "emp-prod-frontend-alb-619623205.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-prod-frontend-alb/aa93dbcb58da3f85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "emp-prod-frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0979e23d01d8101bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0034bda580633f970"
              },
              {
                "subnet_id": "subnet-0642a3fa899c6b146"
              },
              {
                "subnet_id": "subnet-08a15b0fc26f78b95"
              },
              {
                "subnet_id": "subnet-0ab9f1adb21d08d4a"
              },
              {
                "subnet_id": "subnet-0b0af126460583eba"
              },
              {
                "subnet_id": "subnet-0dd5d6a1cc7844d56"
              }
            ],
            "subnets": [
              "subnet-0034bda580633f970",
              "subnet-0642a3fa899c6b146",
              "subnet-08a15b0fc26f78b95",
              "subnet-0ab9f1adb21d08d4a",
              "subnet-0b0af126460583eba",
              "subnet-0dd5d6a1cc7844d56"
            ],
            "vpc_id": "vpc-02cb40b4e650bf1fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-prod-frontend-alb/aa93dbcb58da3f85"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "qa",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-qa-frontend-alb/15f8af5d4a620968",
            "arn_suffix": "app/emp-qa-frontend-alb/15f8af5d4a620968",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "emp-qa-frontend-alb-2074475423.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-qa-frontend-alb/15f8af5d4a620968",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "emp-qa-frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0979e23d01d8101bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0034bda580633f970"
              },
              {
                "subnet_id": "subnet-0642a3fa899c6b146"
              },
              {
                "subnet_id": "subnet-08a15b0fc26f78b95"
              },
              {
                "subnet_id": "subnet-0ab9f1adb21d08d4a"
              },
              {
                "subnet_id": "subnet-0b0af126460583eba"
              },
              {
                "subnet_id": "subnet-0dd5d6a1cc7844d56"
              }
            ],
            "subnets": [
              "subnet-0034bda580633f970",
              "subnet-0642a3fa899c6b146",
              "subnet-08a15b0fc26f78b95",
              "subnet-0ab9f1adb21d08d4a",
              "subnet-0b0af126460583eba",
              "subnet-0dd5d6a1cc7844d56"
            ],
            "vpc_id": "vpc-02cb40b4e650bf1fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-qa-frontend-alb/15f8af5d4a620968"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "uat",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-uat-frontend-alb/0d8c6673fbec16cf",
            "arn_suffix": "app/emp-uat-frontend-alb/0d8c6673fbec16cf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "emp-uat-frontend-alb-1240309185.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-uat-frontend-alb/0d8c6673fbec16cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "emp-uat-frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0979e23d01d8101bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0034bda580633f970"
              },
              {
                "subnet_id": "subnet-0642a3fa899c6b146"
              },
              {
                "subnet_id": "subnet-08a15b0fc26f78b95"
              },
              {
                "subnet_id": "subnet-0ab9f1adb21d08d4a"
              },
              {
                "subnet_id": "subnet-0b0af126460583eba"
              },
              {
                "subnet_id": "subnet-0dd5d6a1cc7844d56"
              }
            ],
            "subnets": [
              "subnet-0034bda580633f970",
              "subnet-0642a3fa899c6b146",
              "subnet-08a15b0fc26f78b95",
              "subnet-0ab9f1adb21d08d4a",
              "subnet-0b0af126460583eba",
              "subnet-0dd5d6a1cc7844d56"
            ],
            "vpc_id": "vpc-02cb40b4e650bf1fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-uat-frontend-alb/0d8c6673fbec16cf"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-f-tg/9300ae2ee142aae7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-dev-frontend-alb/fd9ce6ea751d5042",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-f-tg/5969eb1459cd123e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-prod-frontend-alb/aa93dbcb58da3f85",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "qa",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-f-tg/b49faedd8cc38ada",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-qa-frontend-alb/15f8af5d4a620968",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "uat",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-f-tg/0517800daf4e6a4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-uat-frontend-alb/0d8c6673fbec16cf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-b-tg/b79e6ccdf8b1b86c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98/a269e02329bd007e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98/a269e02329bd007e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-dev-frontend-alb/fd9ce6ea751d5042/9d4ffdc6f5fd8c98/a269e02329bd007e"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-b-tg/7b1dcb67d8eca661",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c/557d2df6215deed4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c/557d2df6215deed4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-prod-frontend-alb/aa93dbcb58da3f85/984724c05505538c/557d2df6215deed4"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "qa",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-b-tg/e08875b0be86a9ee",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5/b8f00969c13b8bfe",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5/b8f00969c13b8bfe",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-qa-frontend-alb/15f8af5d4a620968/44dc264db89ad3b5/b8f00969c13b8bfe"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "uat",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-b-tg/57b52ad8e65d8702",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d/4880f19064cbdf7f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d/4880f19064cbdf7f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:listener-rule/app/emp-uat-frontend-alb/0d8c6673fbec16cf/144cbe6372604c8d/4880f19064cbdf7f"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_lb.frontend",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-b-tg/b79e6ccdf8b1b86c",
            "arn_suffix": "targetgroup/app-4-dev-b-tg/b79e6ccdf8b1b86c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-b-tg/b79e6ccdf8b1b86c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-dev-frontend-alb/fd9ce6ea751d5042"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-dev-b-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-b-tg/b79e6ccdf8b1b86c"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-b-tg/7b1dcb67d8eca661",
            "arn_suffix": "targetgroup/app-4-prod-b-tg/7b1dcb67d8eca661",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-b-tg/7b1dcb67d8eca661",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-prod-frontend-alb/aa93dbcb58da3f85"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-prod-b-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-b-tg/7b1dcb67d8eca661"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "qa",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-b-tg/e08875b0be86a9ee",
            "arn_suffix": "targetgroup/app-4-qa-b-tg/e08875b0be86a9ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-b-tg/e08875b0be86a9ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-qa-frontend-alb/15f8af5d4a620968"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-qa-b-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-b-tg/e08875b0be86a9ee"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-b-tg/57b52ad8e65d8702",
            "arn_suffix": "targetgroup/app-4-uat-b-tg/57b52ad8e65d8702",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-b-tg/57b52ad8e65d8702",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-uat-frontend-alb/0d8c6673fbec16cf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-uat-b-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-b-tg/57b52ad8e65d8702"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-f-tg/9300ae2ee142aae7",
            "arn_suffix": "targetgroup/app-4-dev-f-tg/9300ae2ee142aae7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-f-tg/9300ae2ee142aae7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-dev-frontend-alb/fd9ce6ea751d5042"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-dev-f-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-dev-f-tg/9300ae2ee142aae7"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-f-tg/5969eb1459cd123e",
            "arn_suffix": "targetgroup/app-4-prod-f-tg/5969eb1459cd123e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-f-tg/5969eb1459cd123e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-prod-frontend-alb/aa93dbcb58da3f85"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-prod-f-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-prod-f-tg/5969eb1459cd123e"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "qa",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-f-tg/b49faedd8cc38ada",
            "arn_suffix": "targetgroup/app-4-qa-f-tg/b49faedd8cc38ada",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-f-tg/b49faedd8cc38ada",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-qa-frontend-alb/15f8af5d4a620968"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-qa-f-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-qa-f-tg/b49faedd8cc38ada"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-f-tg/0517800daf4e6a4a",
            "arn_suffix": "targetgroup/app-4-uat-f-tg/0517800daf4e6a4a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-f-tg/0517800daf4e6a4a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:552940445807:loadbalancer/app/emp-uat-frontend-alb/0d8c6673fbec16cf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-4-uat-f-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:552940445807:targetgroup/app-4-uat-f-tg/0517800daf4e6a4a"
          },
          "dependencies": [
            "aws_ecs_cluster.dev",
            "aws_ecs_cluster.prod",
            "aws_ecs_cluster.qa",
            "aws_ecs_cluster.uat",
            "aws_service_discovery_http_namespace.app1_dev",
            "aws_service_discovery_http_namespace.app1_prod",
            "aws_service_discovery_http_namespace.app1_qa",
            "aws_service_discovery_http_namespace.app1_uat",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552940445807:security-group/sg-0979e23d01d8101bd",
            "description": "Security group for frontend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0979e23d01d8101bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-4-alb-sg",
            "name_prefix": "",
            "owner_id": "552940445807",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-4-alb-sg"
            },
            "tags_all": {
              "Name": "app-4-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "552940445807",
            "id": "sg-0979e23d01d8101bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552940445807:security-group/sg-0a6dbd5b2400543e2",
            "description": "Security group for ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6dbd5b2400543e2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0979e23d01d8101bd"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from ECS services",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0979e23d01d8101bd"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow backend traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0979e23d01d8101bd"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "app-4-ecs-sg",
            "name_prefix": "",
            "owner_id": "552940445807",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-4-ecs-sg"
            },
            "tags_all": {
              "Name": "app-4-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cb40b4e650bf1fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "552940445807",
            "id": "sg-0a6dbd5b2400543e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}